# polygenerator

./: LICENSE  README.md  example.py  plot.py  polygenerator.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
