[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "polygenerator"
author = "Radovan Bast"
author-email = "radovan.bast@uit.no"
home-page = "https://github.com/bast/polygenerator"
description-file="README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
